# ai_pdf_translator

./: .gitignore  README.md  config.json.example  main.py  pyproject.toml
ai_pdf_translator/: epub_builder.py  llm_processor.py  pdf_parser.py
tests/: test_basic.py
